--- a/Lab1_Kotlin_xml/app/src/main/res/values/strings.xml
+++ b/Lab1_Kotlin_xml/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">TDDC73Lab1</string>
+    <string name="app_name">Lab1_kotlin_compose</string>
 </resources>
